// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationIcons Web Next page icon renders out an svg and label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NextPageIcon />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Text
          style={65}
        >
          <PageLabel
            direction="Next"
          />
        </Text>,
        <Svg
          height={12}
          viewBox="42 12 60 120"
          width={7}
        >
          <G
            fill="#006699"
          >
            <Path
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />
          </G>
        </Svg>,
      ],
      "style": 63,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <PageLabel
            direction="Next"
          />,
          "style": 65,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "direction": "Next",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <G
            fill="#006699"
          >
            <Path
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />
          </G>,
          "height": 12,
          "viewBox": "42 12 60 120",
          "width": 7,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Path
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />,
            "fill": "#006699",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "d": "M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Text
            style={65}
          >
            <PageLabel
              direction="Next"
            />
          </Text>,
          <Svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <G
              fill="#006699"
            >
              <Path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </G>
          </Svg>,
        ],
        "style": 63,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <PageLabel
              direction="Next"
            />,
            "style": 65,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "direction": "Next",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <G
              fill="#006699"
            >
              <Path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />
            </G>,
            "height": 12,
            "viewBox": "42 12 60 120",
            "width": 7,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Path
                d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
              />,
              "fill": "#006699",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "d": "M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`PaginationIcons Web Previous page icon renders out an svg and label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviousPageIcon />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Svg
          height={12}
          viewBox="42 12 60 120"
          width={7}
        >
          <G
            fill="#006699"
          >
            <Path
              d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
            />
          </G>
        </Svg>,
        <Text
          style={66}
        >
          <PageLabel
            direction="Previous"
          />
        </Text>,
      ],
      "style": 64,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <G
            fill="#006699"
          >
            <Path
              d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
            />
          </G>,
          "height": 12,
          "viewBox": "42 12 60 120",
          "width": 7,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Path
              d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
            />,
            "fill": "#006699",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "d": "M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <PageLabel
            direction="Previous"
          />,
          "style": 66,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "direction": "Previous",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Svg
            height={12}
            viewBox="42 12 60 120"
            width={7}
          >
            <G
              fill="#006699"
            >
              <Path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
              />
            </G>
          </Svg>,
          <Text
            style={66}
          >
            <PageLabel
              direction="Previous"
            />
          </Text>,
        ],
        "style": 64,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <G
              fill="#006699"
            >
              <Path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
              />
            </G>,
            "height": 12,
            "viewBox": "42 12 60 120",
            "width": 7,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Path
                d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
              />,
              "fill": "#006699",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "d": "M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <PageLabel
              direction="Previous"
            />,
            "style": 66,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "direction": "Previous",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
